# antropy

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  codecov.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: python_tests.yml
antropy/: __init__.py  entropy.py  fractal.py  utils.py
antropy/tests/: test_entropy.py  test_fractal.py  utils.py
docs/: api.rst  changelog.rst  conf.py  index.rst
entropy/: __init__.py  entropy.py  fractal.py  others.py  utils.py
entropy/tests/: test_entropy.py  test_fractal.py  test_others.py
notebooks/: Benchmarks.ipynb  DFA.ipynb  Entropy_correlation.ipynb  Higuchi.ipynb  complexity_corr_membrane_potential.ipynb  complexity_corr_noise.ipynb  complexity_corr_sine.ipynb  complexity_metrics_correlation.ipynb  entropy.ipynb  perm_entropy.ipynb
src/antropy/: __init__.py  entropy.py  fractal.py  utils.py
tests/: test_entropy.py  test_fractal.py
